k8s/ingress-qua.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nex-api-ingress
spec:
  rules:
    - host: nex-api.local
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: api-service
                port:
                  number: 3000
